DG-3791: disabled try it out option

--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -110,6 +110,7 @@ plugins:
   - swagger-ui-tag:
       filter: false
       tryItOutEnabled: false
+      supportedSubmitMethods: []
 
 exclude_docs: |
   attic/*
