--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -352,6 +352,7 @@ nav:
         - Access Management:
             - resources/design/access-management/index.md
             - Integrations: resources/design/access-management/access_integrations.md
+            - User Identities: resources/design/access-management/user_identities.md
             - Access Tools: resources/design/access-management/access_tools.md
       - API Reference:
         - resources/api-reference/index.md
