DG-3791: added about secure views

--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -354,6 +354,7 @@ nav:
             - Integrations: resources/design/access-management/access_integrations.md
             - User Identities: resources/design/access-management/user_identities.md
             - Access Tools: resources/design/access-management/access_tools.md
+            - About Secure Views: resources/design/access-management/about_secure_views.md
             - About JWT Tokens: resources/design/access-management/about_jwt_tokens.md
       - API Reference:
         - resources/api-reference/index.md
