--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -233,19 +233,17 @@ nav:
               - Troubleshooting: get-started/base-installation/data-plane/troubleshooting.md
           - Self Managed:
               - get-started/base-installation/self-managed/index.md
-              - Prerequisites:
-                  - get-started/base-installation/self-managed/prerequisites/index.md
-                  - AWS Cloud Resources: get-started/base-installation/self-managed/prerequisites/aws-cloud-resources.md
-                  - Azure Cloud Resources: get-started/base-installation/self-managed/prerequisites/azure-cloud-resources.md
-                  - Google Cloud Resources: get-started/base-installation/self-managed/prerequisites/google-cloud-resources.md
-              - Setup: get-started/base-installation/self-managed/setup/index.md
-              - Basic Configuration Old: get-started/base-installation/self-managed/basic-configuration.md
-              - Basic Configuration:
-                  - get-started/base-installation/self-managed/basic-configuration/index.md
-                  - Prerequisites: get-started/base-installation/self-managed/basic-configuration/prerequisites.md
-                  - Setup: get-started/base-installation/self-managed/basic-configuration/setup.md
-                  - Configuration: get-started/base-installation/self-managed/basic-configuration/configuration.md
-                  - Troubleshooting: get-started/base-installation/self-managed/basic-configuration/troubleshooting.md
+              - Setup:
+                  - get-started/base-installation/self-managed/setup/index.md
+                  - Prerequisites:
+                      - get-started/base-installation/self-managed/setup/prerequisites/index.md
+                      - AWS Cloud Resources: get-started/base-installation/self-managed/setup/prerequisites/aws-cloud-resources.md
+                      - Azure Cloud Resources: get-started/base-installation/self-managed/setup/prerequisites/azure-cloud-resources.md
+                      - Google Cloud Resources: get-started/base-installation/self-managed/setup/prerequisites/google-cloud-resources.md
+                  - Privacera Manager Setup: get-started/base-installation/self-managed/setup/privacera-manager-setup.md
+                  - Basic Configuration: get-started/base-installation/self-managed/setup/basic-configuration.md
+                  - Troubleshooting: get-started/base-installation/self-managed/setup/troubleshooting.md
+              - Self Managed Access: get-started/base-installation/self-managed/self-managed-access.md
               - Self Managed Discovery:
                   - get-started/base-installation/self-managed/self-managed-discovery/index.md
                   - Prerequisites: get-started/base-installation/self-managed/self-managed-discovery/prerequisites.md
@@ -272,25 +270,25 @@ nav:
                   - Configuration: get-started/base-installation/self-managed/privaceracloud-data-plane/configuration.md
                   - Troubleshooting: get-started/base-installation/self-managed/privaceracloud-data-plane/troubleshooting.md
               - PrivaceraCloud Data-plane Privacera Discovery:
-                    - get-started/base-installation/self-managed/privaceracloud-data-plane-discovery/index.md
-                    - Prerequisites: get-started/base-installation/self-managed/privaceracloud-data-plane-discovery/prerequisites.md
-                    - Configuration: get-started/base-installation/self-managed/privaceracloud-data-plane-discovery/configuration.md
-                    - Troubleshooting: get-started/base-installation/self-managed/privaceracloud-data-plane-discovery/troubleshooting.md
+                  - get-started/base-installation/self-managed/privaceracloud-data-plane-discovery/index.md
+                  - Prerequisites: get-started/base-installation/self-managed/privaceracloud-data-plane-discovery/prerequisites.md
+                  - Configuration: get-started/base-installation/self-managed/privaceracloud-data-plane-discovery/configuration.md
+                  - Troubleshooting: get-started/base-installation/self-managed/privaceracloud-data-plane-discovery/troubleshooting.md
               - PrivaceraCloud Data-plane Privacera Encryption:
-                    - get-started/base-installation/self-managed/privaceracloud-data-plane-encryption/index.md
-                    - Prerequisites: get-started/base-installation/self-managed/privaceracloud-data-plane-encryption/prerequisites.md
-                    - Configuration: get-started/base-installation/self-managed/privaceracloud-data-plane-encryption/configuration.md
-                    - Troubleshooting: get-started/base-installation/self-managed/privaceracloud-data-plane-encryption/troubleshooting.md
+                  - get-started/base-installation/self-managed/privaceracloud-data-plane-encryption/index.md
+                  - Prerequisites: get-started/base-installation/self-managed/privaceracloud-data-plane-encryption/prerequisites.md
+                  - Configuration: get-started/base-installation/self-managed/privaceracloud-data-plane-encryption/configuration.md
+                  - Troubleshooting: get-started/base-installation/self-managed/privaceracloud-data-plane-encryption/troubleshooting.md
               - PrivaceraCloud Data-plane Dataserver:
-                    - get-started/base-installation/self-managed/privaceracloud-data-plane-dataserver/index.md
-                    - Prerequisites: get-started/base-installation/self-managed/privaceracloud-data-plane-dataserver/prerequisites.md
-                    - Configuration: get-started/base-installation/self-managed/privaceracloud-data-plane-dataserver/configuration.md
-                    - Troubleshooting: get-started/base-installation/self-managed/privaceracloud-data-plane-dataserver/troubleshooting.md
+                  - get-started/base-installation/self-managed/privaceracloud-data-plane-dataserver/index.md
+                  - Prerequisites: get-started/base-installation/self-managed/privaceracloud-data-plane-dataserver/prerequisites.md
+                  - Configuration: get-started/base-installation/self-managed/privaceracloud-data-plane-dataserver/configuration.md
+                  - Troubleshooting: get-started/base-installation/self-managed/privaceracloud-data-plane-dataserver/troubleshooting.md
               - PrivaceraCloud Data-plane Usersync:
-                    - get-started/base-installation/self-managed/privaceracloud-usersync/index.md
-                    - Prerequisites: get-started/base-installation/self-managed/privaceracloud-data-plane-usersync/prerequisites.md
-                    - Configuration: get-started/base-installation/self-managed/privaceracloud-data-plane-usersync/configuration.md
-                    - Troubleshooting: get-started/base-installation/self-managed/privaceracloud-data-plane-usersync/troubleshooting.md
+                  - get-started/base-installation/self-managed/privaceracloud-usersync/index.md
+                  - Prerequisites: get-started/base-installation/self-managed/privaceracloud-data-plane-usersync/prerequisites.md
+                  - Configuration: get-started/base-installation/self-managed/privaceracloud-data-plane-usersync/configuration.md
+                  - Troubleshooting: get-started/base-installation/self-managed/privaceracloud-data-plane-usersync/troubleshooting.md
               - Advanced Configuration:
                   - get-started/base-installation/self-managed/advanced-configuration/index.md
                   - Air-gap Setup: get-started/base-installation/self-managed/advanced-configuration/air-gap-installation.md
